--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,22 @@ h1 {
     font-size: 50px;
     font-weight: normal;
     text-align: center;
+    color: white;
+}
+
+h2 {
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+}
+
+h3 {
+    font-size: 21px;
+    color: gray;
+}
+
+.logo {
+    text-align: right;
 }
 
 a {
